--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 			<h2>Skills</h2>
 		</div>
 		<div class="box">
-			<div class="row">
+			<div class="col">
 				<ul>
 					<li><b style="color:rgb(35, 212, 4)">Project management:</b> Developed a Java project with two other Bilkent CS freshmen 
 						in less than two weeks and got A in project demo in Fall 2021-2022. 
@@ -118,7 +118,7 @@
 						Learning HTML and CSS this summer to get a better grasp of front-end programming.</li><br/>
 				</ul>
 			</div>
-			<div class="row">
+			<div class="col">
 				<ul>
 					<li><b style="color:rgb(255, 60, 0)">Leadership:</b> Was the leader of CS 102 project group. 
 						Provided directions and work distributions alongside self-contributions to the project. 
@@ -130,7 +130,7 @@
 					Researched the notion of Transhumanism to determine its projected impacts and to get a better understanding for how programming technologies will be harmonized with everyday life.</li><br/>
 				</ul>
 			</div>
-			<div class="row">
+			<div class="col">
 				<ul>
 					<li><b style="color:rgb(183, 0, 255)">Turkish (Native)</b></li><br/>
 					<li><b style="color:rgb(183, 0, 255)">English:</b> Got 8 Overall Band Score (Reading: 9, Listening: 8, Writing: 6.5, Speaking: 7.5) 
