--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
 			<nav>
 				<h2 class="logo"><span><a href="#intro">Oğuz Akın</a></span></h2>
 				<ul>
-					<li><a href="#about">About Me</a></li>
-					<li><a href="#education">Education</a></li>
-					<li><a href="#skills">Skills</a></li>
-					<li><a href="#contact">Contact Me</a></li>
+					<li><a href="#about"><i class="fas fa-user"></i> About Me</a></li>
+					<li><a href="#education"><i class="fas fa-graduation-cap"></i> Education</a></li>
+					<li><a href="#skills"><i class="fa fa-code"></i> Skills</a></li>
+					<li><a href="#contact"><i class="fa fa-envelope"></i> Contact Me</a></li>
 				</ul>
 			</nav>
 		</div>
@@ -63,17 +63,45 @@
 
 		<div class="box">
 			<div class="card">
-				<i class="fas fa-bars"></i>
-				<h5>Web Development</h5>
+				<i class="fas fa-graduation-cap"></i>
+				<h5 style="color: rgb(234, 149, 11);font-size: 23px;margin-bottom: 15px;">Karşıyaka Atakent Anatolian High School<br/>
+					<span style="color:seashell;">High School Diploma</span><br/><span style="color:turquoise;">Sep 2016 - Jun 2020</span></h5>
 				<div class="pra">
-					<p>Every website should be built with two primary goals: Firstly, it needs to work across all devices. Secondly, it needs to be fast as possible.</p>
-
-					<p style="text-align: center;">
-						<a class="button" href="#">Read More</a>
+					<p>
+						Graduation Grade: 94,3898 out of 100<br/>A-Level Subjects: Mathematics (A), Physics (A), Chemistry (A), Biology (A), English (A), Secondary Foreign Language (German) (A)
 					</p>
 				</div>
 			</div>
-
+			<div class="card">
+				<i class="fas fa-graduation-cap"></i>
+				<h5 style="color: rgb(234, 149, 11);font-size: 23px;margin-bottom: 15px;">İhsan Doğramacı Bilkent University<br/>
+					<span style="color:seashell;">BSc Computer Engineering</span><br/><span style="color:turquoise;">Sep 2020 - Present</span></h5>
+				<div class="pra">
+					<p>
+						Predicted Grade: First Class Degree<br/>Major GPA: 3.73<br/>
+						Important Subjects: Algorithms and Programming I (A), Algorithms and Programming II
+						(A), Fundamental Structures of Computer Science I (A), English and
+						Composition II (A), English and Composition I (-A), Introduction to Modern
+						Biology (-A), General Physics (+B), Calculus II (B), Digital Design (B)
+					</p>
+				</div>
+			</div>
+			<div class="card">
+				<i class="fa fa-trophy"></i>
+				<h5 style="color: rgb(234, 149, 11);font-size: 23px;margin-bottom: 15px;">Achievements</h5>
+				<div class="pra">
+					<ul>
+						<li>Certificate of Achievement in secondary school.</li>
+						<li>Honour Certificate in 10th and 11th grades.</li>
+						<li>Certificate of Outstanding Achievement in 11th and 12th grades.</li>
+						<li>Was in High Honour Roll for 2020-2021 Spring and 2021-2022 Fall semesters at İhsan Doğramacı Bilkent University.</li>
+						<li>Currently in Honour Roll for 2021-2022 Spring semester at İhsan Doğramacı Bilkent University.</li>
+						<li>Got an 8 overall band score in IELTS Academic Test, corresponding to C1 CEFR English level.</li>
+						<li>Got a 1440 SAT score within 98th percentile.</li>
+					</ul>
+				</div>
+			</div>
+			<!--
 			<div class="card">
 				<i class="far fa-user"></i>
 				<h5>Web Development</h5>
@@ -96,7 +124,7 @@
 						<a class="button" href="#">Read More</a>
 					</p>
 				</div>
-			</div>
+			</div>-->
 		</div>
 	</div>
 
