--- a/index.html
+++ b/index.html
@@ -14,19 +14,19 @@
 			<nav>
 				<h2 class="logo"><span><a href="#intro">Oğuz Akın</a></span></h2>
 				<ul>
-					<li><a href="#about"><i class="fas fa-user"></i> About Me</a></li>
-					<li><a href="#education"><i class="fas fa-graduation-cap"></i> Education</a></li>
-					<li><a href="#skills"><i class="fa fa-code"></i> Skills</a></li>
-					<li><a href="#contact"><i class="fa fa-envelope"></i> Contact Me</a></li>
+					<li class="scroll-link"><a href="#about"><i class="fas fa-user"></i> About Me</a></li>
+					<li class="scroll-link"><a href="#education"><i class="fas fa-graduation-cap"></i> Education</a></li>
+					<li class="scroll-link"><a href="#skills"><i class="fa fa-code"></i> Skills</a></li>
+					<li class="scroll-link"><a href="#contact"><i class="fa fa-envelope"></i> Contact Me</a></li>
 				</ul>
 			</nav>
 		</div>
 	</header>
     <div class="intro" id="intro">
 		<div class="content">
-			<h4>Hi, I'm</h4>
-			<h1><span1>Oğuz Akın</span1></h1>
-			<h3>I am a sophomore Computer Engineering <br/>student<a href="https://w3.bilkent.edu.tr/bilkent/" target="_blank"><b> @ Bilkent University.</b></a></h3>
+			<h4 class="slide-left">Hi, I'm</h4>
+			<h1 class="slide-left"><span1>Oğuz Akın</span1></h1>
+			<h3 class="slide-left">I am a sophomore Computer Engineering <br/>student<a href="https://w3.bilkent.edu.tr/bilkent/" target="_blank"><b> @ Bilkent University.</b></a></h3>
 		</div>
 	</div>
 
@@ -35,9 +35,9 @@
 		<div class="main">
 			<img src="Profile.jpeg">
 			<div class="about-text">
-				<h2>About Me</h2>
-				<h5><span2>Programming Enthusiast</span2></h5>
-				<p>A proactive BSc Computer
+				<h2 class="appear">About Me</h2>
+				<h5 class="appear"><span2>Programming Enthusiast</span2></h5>
+				<p class="appear">A proactive BSc Computer
 					Engineering student at İhsan
 					Doğramacı Bilkent University with
 					strong academic achievement, was in
@@ -63,7 +63,7 @@
 
 		<div class="box">
 			<div class="card">
-				<i class="fas fa-graduation-cap"></i>
+				<img src="atakent.png"/>
 				<h5 style="color: rgb(234, 149, 11);font-size: 23px;margin-bottom: 15px;">Karşıyaka Atakent Anatolian High School<br/>
 					<span style="color:seashell;">High School Diploma</span><br/><span style="color:turquoise;">Sep 2016 - Jun 2020</span></h5>
 				<div class="pra">
@@ -73,7 +73,7 @@
 				</div>
 			</div>
 			<div class="card">
-				<i class="fas fa-graduation-cap"></i>
+				<img src="bilkent.png"/>
 				<h5 style="color: rgb(234, 149, 11);font-size: 23px;margin-bottom: 15px;">İhsan Doğramacı Bilkent University<br/>
 					<span style="color:seashell;">BSc Computer Engineering</span><br/><span style="color:turquoise;">Sep 2020 - Present</span></h5>
 				<div class="pra">
@@ -101,30 +101,6 @@
 					</ul>
 				</div>
 			</div>
-			<!--
-			<div class="card">
-				<i class="far fa-user"></i>
-				<h5>Web Development</h5>
-				<div class="pra">
-					<p>Every website should be built with two primary goals: Firstly, it needs to work across all devices. Secondly, it needs to be fast as possible.</p>
-
-					<p style="text-align: center;">
-						<a class="button" href="#">Read More</a>
-					</p>
-				</div>
-			</div>
-
-			<div class="card">
-				<i class="far fa-bell"></i>
-				<h5>Web Development</h5>
-				<div class="pra">
-					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur ad enim nostrum ipsa iusto quos molestiae minima, recusandae id explicabo itaque corporis, consectetur ducimus? Iusto ad magnam facilis provident dignissimos?</p>
-
-					<p style="text-align: center;">
-						<a class="button" href="#">Read More</a>
-					</p>
-				</div>
-			</div>-->
 		</div>
 	</div>
 
