--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css" integrity="sha512-1cK78a1o+ht2JcaW6g8OXYwqpev9+6GqOkz9xmBN9iUUhIndKtxwILGWYOSibOKjLsEdjyjZvYDq/cZwNeak0w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
 	<header>
@@ -22,20 +23,20 @@
 		</div>
 	</header>
     <div class="intro" id="intro">
-		<div class="content">
-			<h4 class="slide-left">Hi, I'm</h4>
-			<h1 class="slide-left"><span1>Oğuz Akın</span1></h1>
-			<h3 class="slide-left">I am a sophomore Computer Engineering <br/>student<a href="https://w3.bilkent.edu.tr/bilkent/" target="_blank"><b> @ Bilkent University.</b></a></h3>
+		<div class="content" data-aos="fade-left" data-aos-duration="700">
+			<h4>Hi, I'm</h4>
+			<h1><span1>Oğuz Akın</span1></h1>
+			<h3>I am a sophomore Computer Engineering <br/>student<a href="https://w3.bilkent.edu.tr/bilkent/" target="_blank"><b> @ Bilkent University.</b></a></h3>
 		</div>
 	</div>
 
 	<section class="about" id="about">
 		<div class="main">
-			<img src="Profile.jpeg">
-			<div class="about-text">
-				<h2 class="appear">About Me</h2>
-				<h5 class="appear"><span2>Programming Enthusiast</span2></h5>
-				<p class="appear">A proactive BSc Computer
+			<img src="Profile.jpeg" data-aos="zoom-in" data-aos-duration="1000" data-aos-delay="200">
+			<div class="about-text" data-aos="fade-down" data-aos-duration="1000" data-aos-delay="200">
+				<h2>About Me</h2>
+				<h5 ><span2>Programming Enthusiast</span2></h5>
+				<p>A proactive BSc Computer
 					Engineering student at İhsan
 					Doğramacı Bilkent University with
 					strong academic achievement, was in
@@ -54,12 +55,12 @@
 	</section>
 
 	<div class="education" id="education">
-		<div class="title">
+		<div class="title" data-aos="fade-out" data-aos-duration="1000" data-aos-delay="200">
 			<h2>Education</h2>
 		</div>
 
 		<div class="box">
-			<div class="card">
+			<div class="card" data-aos="flip-right" data-aos-duration="700" data-aos-delay="200">
 				<img src="atakent.png"/>
 				<h5 style="color: rgb(234, 149, 11);font-size: 23px;margin-bottom: 15px;">Karşıyaka Atakent Anatolian High School<br/>
 					<span style="color:seashell;">High School Diploma</span><br/><span style="color:turquoise;">Sep 2016 - Jun 2020</span></h5>
@@ -69,7 +70,7 @@
 					</p>
 				</div>
 			</div>
-			<div class="card">
+			<div class="card" data-aos="flip-right" data-aos-duration="700" data-aos-delay="200">
 				<img src="bilkent.png"/>
 				<h5 style="color: rgb(234, 149, 11);font-size: 23px;margin-bottom: 15px;">İhsan Doğramacı Bilkent University<br/>
 					<span style="color:seashell;">BSc Computer Engineering</span><br/><span style="color:turquoise;">Sep 2020 - Present</span></h5>
@@ -83,7 +84,7 @@
 					</p>
 				</div>
 			</div>
-			<div class="card">
+			<div class="card" data-aos="flip-right" data-aos-duration="700" data-aos-delay="200">
 				<i class="fa fa-trophy"></i>
 				<h5 style="color: rgb(234, 149, 11);font-size: 23px;margin-bottom: 15px;">Achievements</h5>
 				<div class="pra">
@@ -102,16 +103,16 @@
 	</div>
 
 	<div class="skills" id="skills">
-		<div class="title">
+		<div class="title" data-aos="fade-out" data-aos-duration="1000" data-aos-delay="200">
 			<h2>Skills</h2>
 		</div>
 		<div class="box">
 			<div class="col">
 				<ul>
-					<li><b style="color:rgb(35, 212, 4)">Project management:</b> Developed a Java project with two other Bilkent CS freshmen 
+					<li data-aos="fade-up" data-aos-duration="700" data-aos-delay="200"><b style="color:rgb(35, 212, 4)">Project management:</b> Developed a Java project with two other Bilkent CS freshmen 
 						in less than two weeks and got A in project demo in Fall 2021-2022. 
 						Demonstrated good knowledge of JavaFX and used MySQL for the database.</li><br/>
-					<li><b style="color:rgb(35, 212, 4)">Programming:</b> Have good knowledge about algorithm designing and programming notions 
+					<li data-aos="fade-up" data-aos-duration="700" data-aos-delay="200"><b style="color:rgb(35, 212, 4)">Programming:</b> Has good knowledge about algorithm designing and programming notions 
 						like object-oriented programming. Learned Java for a year and developed the CS 102 project using it. 
 						Made an intro to Python last Summer and adjusted previous Java learnings to it.
 						Dived into C++ this semester with CS 201 and implemented fundamental data structures with C++. 
@@ -120,29 +121,29 @@
 			</div>
 			<div class="col">
 				<ul>
-					<li><b style="color:rgb(255, 60, 0)">Leadership:</b> Was the leader of CS 102 project group. 
+					<li data-aos="fade-up" data-aos-duration="700" data-aos-delay="200"><b style="color:rgb(255, 60, 0)">Leadership:</b> Was the leader of CS 102 project group. 
 						Provided directions and work distributions alongside self-contributions to the project. 
 						Whole group got A in project presentation.Also led a social studies group in
 						HIST 200, arranged meetings and conducted interviews as self-contribution.
 						The group got full points in paper presentation</li><br/>
-					<li><b style="color:rgb(255, 60, 0)">Research:</b> Done research about what Augmented Reality is and how it can impact the future. Paper got full points. 
-					Also, investigated the effects of mass tourism to determine whether it was detrimental or beneficial. 
+					<li data-aos="fade-up" data-aos-duration="700" data-aos-delay="200"><b style="color:rgb(255, 60, 0)">Research:</b> Done research about what Augmented Reality is and how it can impact the future. Paper got full points. 
+					Also, investigated the effects of mass tourism to determine whether it is detrimental or beneficial. 
 					Researched the notion of Transhumanism to determine its projected impacts and to get a better understanding for how programming technologies will be harmonized with everyday life.</li><br/>
 				</ul>
 			</div>
 			<div class="col">
 				<ul>
-					<li><b style="color:rgb(183, 0, 255)">Turkish (Native)</b></li><br/>
-					<li><b style="color:rgb(183, 0, 255)">English:</b> Got 8 Overall Band Score (Reading: 9, Listening: 8, Writing: 6.5, Speaking: 7.5) 
-						in IELTS June 2022, corresponding to C1 CEFR English level.</li><br/>
-					<li><b style="color:rgb(183, 0, 255)">German:</b> Have basis level knowledge and building up on it currently.</li><br/>
+					<li data-aos="fade-up" data-aos-duration="700" data-aos-delay="200"><b style="color:rgb(183, 0, 255)">Turkish (Native)</b></li><br/>
+					<li data-aos="fade-up" data-aos-duration="700" data-aos-delay="200"><b style="color:rgb(183, 0, 255)">English:</b> Got 8 Overall Band Score (Reading: 9, Listening: 8, Writing: 6.5, Speaking: 7.5) 
+						in IELTS Academic Test June 2022, corresponding to C1 CEFR English level.</li><br/>
+					<li data-aos="fade-up" data-aos-duration="700" data-aos-delay="200"><b style="color:rgb(183, 0, 255)">German:</b> Has basis level knowledge and building up on it currently.</li><br/>
 				</ul>
 			</div>
 		</div>
 	</div>
 
 	<footer id="contact">
-		<p>Contact Me</p>
+		<p data-aos="fade-out" data-aos-duration="1000">Contact Me</p>
 		<p>I am only an email away!</p>
 		<div class="social">
 			<a href="mailto:eoguzakin@hotmail.com"><i class='fa fa-envelope'></i></i></a>
@@ -151,5 +152,7 @@
 			<a href="https://www.researchgate.net/profile/Oguz-Akin-4" target="_blank"><i class="fab fa-researchgate"></i></a>
 		</div>
 	</footer>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js" integrity="sha512-A7AYk1fGKX6S2SsHywmPkrnzTZHrgiVT7GcQkLGDe2ev0aWb8zejytzS8wjo7PGEXKqJOrjQ4oORtnimIRZBtw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+	<script>AOS.init();</script>
 </body>
 </html>
