--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
 		<div class="content" data-aos="fade-left" data-aos-duration="700">
 			<h4>Hi, I'm</h4>
 			<h1><span1>Oğuz Akın</span1></h1>
-			<h3>I am a sophomore Computer Engineering <br/>student<a href="https://w3.bilkent.edu.tr/bilkent/" target="_blank"><b> @ Bilkent University.</b></a></h3>
+			<h3>I am a Computer Science student <a href="https://w3.bilkent.edu.tr/bilkent/" target="_blank"><b>@Saarland University</b></a><br/>
+				I was a Computer Engineering student <a href="https://w3.bilkent.edu.tr/bilkent/" target="_blank"><b>@Bilkent University</b></a></h3>
 		</div>
 	</div>
 
@@ -37,11 +38,11 @@
 				<h2>About Me</h2>
 				<h5 ><span2>Programming Enthusiast</span2></h5>
 				<p>A proactive BSc Computer
-					Engineering student at İhsan
-					Doğramacı Bilkent University with
+					Science student at Saarland University. Was previously in BSc Computer Engineering at İhsan
+					Doğramacı Bilkent University. Has
 					strong academic achievement, was in
-					the High Honour Roll and is currently
-					in the Honour Roll, and programming
+					the High Honour Roll and the Honour Roll back in İhsan
+					Doğramacı Bilkent University, and programming
 					experience with a strong algorithm-programming
 					background. Possesses
 					strong leadership and communication
@@ -73,7 +74,7 @@
 			<div class="card" data-aos="flip-right" data-aos-duration="700" data-aos-delay="200">
 				<img src="bilkent.png"/>
 				<h5 style="color: rgb(234, 149, 11);font-size: 23px;margin-bottom: 15px;">İhsan Doğramacı Bilkent University<br/>
-					<span style="color:seashell;">BSc Computer Engineering</span><br/><span style="color:turquoise;">Sep 2020 - Present</span></h5>
+					<span style="color:seashell;">BSc Computer Engineering</span><br/><span style="color:turquoise;">Sep 2020 - Sep 2022</span></h5>
 				<div class="pra">
 					<p>
 						Predicted Grade: First Class Degree<br/>Major GPA: 3.73<br/>
@@ -93,7 +94,7 @@
 						<li>Honour Certificate in 10th and 11th grades.</li>
 						<li>Certificate of Outstanding Achievement in 11th and 12th grades.</li>
 						<li>Was in High Honour Roll for 2020-2021 Spring and 2021-2022 Fall semesters at İhsan Doğramacı Bilkent University.</li>
-						<li>Currently in Honour Roll for 2021-2022 Spring semester at İhsan Doğramacı Bilkent University.</li>
+						<li>Was in Honour Roll for 2021-2022 Spring semester at İhsan Doğramacı Bilkent University.</li>
 						<li>Got an 8 overall band score in IELTS Academic Test, corresponding to C1 CEFR English level.</li>
 						<li>Got a 1440 SAT score within 98th percentile.</li>
 					</ul>
