A link is corrected

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 		<div class="content" data-aos="fade-left" data-aos-duration="700">
 			<h4>Hi, I'm</h4>
 			<h1><span1>Oğuz Akın</span1></h1>
-			<h3>I am a Computer Science student <a href="https://w3.bilkent.edu.tr/bilkent/" target="_blank"><b>@Saarland University</b></a><br/>
+			<h3>I am a Computer Science student <a href="https://www.uni-saarland.de/en/home.html" target="_blank"><b>@Saarland University</b></a><br/>
 				I was a Computer Engineering student <a href="https://w3.bilkent.edu.tr/bilkent/" target="_blank"><b>@Bilkent University</b></a></h3>
 		</div>
 	</div>
