changes made to keep the site up to date.

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 					experience with a strong algorithm-programming
 					background. Possesses
 					strong leadership and communication
-					skills with fluency in English. Keen to
+					skills with fluency in English and medial German. Keen to
 					pursue a career in Computer Science
 					as an AI specialist, a Computational
 					Biologist or Machine Learning
@@ -86,6 +86,17 @@
 				</div>
 			</div>
 			<div class="card" data-aos="flip-right" data-aos-duration="700" data-aos-delay="200">
+				<div class ="img2"><img src="uni_uds_logo.jpg"/></div>
+				<h5 style="color: rgb(234, 149, 11);font-size: 23px;margin-bottom: 15px;">Saarland University<br/>
+					<span style="color:seashell;">BSc Computer Science</span><br/><span style="color:turquoise;">Sep 2022 - Present</span></h5>
+				<div class="pra">
+					<p>
+						Important Subjects: Programming I, Mathematics for Computer Scientists I, 
+						Perspectives in Computer Science, Programming II, System Architecture, Mathematics for Computer Scientists II
+					</p>
+				</div>
+			</div>
+			<div class="card" data-aos="flip-right" data-aos-duration="700" data-aos-delay="200">
 				<i class="fa fa-trophy"></i>
 				<h5 style="color: rgb(234, 149, 11);font-size: 23px;margin-bottom: 15px;">Achievements</h5>
 				<div class="pra">
@@ -112,12 +123,16 @@
 				<ul>
 					<li data-aos="fade-up" data-aos-duration="700" data-aos-delay="200"><b style="color:rgb(35, 212, 4)">Project management:</b> Developed a Java project with two other Bilkent CS freshmen 
 						in less than two weeks and got A in project demo in Fall 2021-2022. 
-						Demonstrated good knowledge of JavaFX and used MySQL for the database.</li><br/>
+						Demonstrated good knowledge of JavaFX and used MySQL for the database. Developed Programming 2 projects using Arch-Linux</li><br/>
 					<li data-aos="fade-up" data-aos-duration="700" data-aos-delay="200"><b style="color:rgb(35, 212, 4)">Programming:</b> Has good knowledge about algorithm designing and programming notions 
-						like object-oriented programming. Learned Java for a year and developed the CS 102 project using it. 
-						Made an intro to Python last Summer and adjusted previous Java learnings to it.
-						Dived into C++ this semester with CS 201 and implemented fundamental data structures with C++. 
-						Learning HTML and CSS this summer to get a better grasp of front-end programming.</li><br/>
+						like object-oriented programming. Learned Java and developed the CS 102 project using it. 
+						Also completed the Programming II projects with Java; which included implementing a TicTacToe game, simple RayTracer and a C compiler for a small subset of C.
+						Made an intro to Python and adjusted previous Java learnings to it.
+						Dived into C++ with CS 201 and implemented fundamental data structures with C++. 
+						Learned C and implemented image processing and SAT Solver projects with it.
+						Worked with SystemVerilog and Verilog to implement digital circuits and MIPS processor.
+						Worked with MIPS Assembly to implement a German IBAN verifier and instructions to handle syscall errors and timer interrupts.
+						Also learned basics of HTML and CSS.</li><br/>
 				</ul>
 			</div>
 			<div class="col">
@@ -128,7 +143,7 @@
 						HIST 200, arranged meetings and conducted interviews as self-contribution.
 						The group got full points in paper presentation</li><br/>
 					<li data-aos="fade-up" data-aos-duration="700" data-aos-delay="200"><b style="color:rgb(255, 60, 0)">Research:</b> Done research about what Augmented Reality is and how it can impact the future. Paper got full points. 
-					Also, investigated the effects of mass tourism to determine whether it is detrimental or beneficial. 
+					Also, investigated the effects of Mass Tourism to determine whether it is detrimental or beneficial. 
 					Researched the notion of Transhumanism to determine its projected impacts and to get a better understanding for how programming technologies will be harmonized with everyday life.</li><br/>
 				</ul>
 			</div>
@@ -137,7 +152,7 @@
 					<li data-aos="fade-up" data-aos-duration="700" data-aos-delay="200"><b style="color:rgb(183, 0, 255)">Turkish (Native)</b></li><br/>
 					<li data-aos="fade-up" data-aos-duration="700" data-aos-delay="200"><b style="color:rgb(183, 0, 255)">English:</b> Got 8 Overall Band Score (Reading: 9, Listening: 8, Writing: 6.5, Speaking: 7.5) 
 						in IELTS Academic Test June 2022, corresponding to C1 CEFR English level.</li><br/>
-					<li data-aos="fade-up" data-aos-duration="700" data-aos-delay="200"><b style="color:rgb(183, 0, 255)">German:</b> Has basis level knowledge and building up on it currently.</li><br/>
+					<li data-aos="fade-up" data-aos-duration="700" data-aos-delay="200"><b style="color:rgb(183, 0, 255)">German:</b> Has taken courses up to CEFR B2 level and still building up to C1 level.</li><br/>
 				</ul>
 			</div>
 		</div>
