--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
 			<h4>Hi, I'm</h4>
 			<h1><span1>Oğuz Akın</span1></h1>
 			<h3>I am a Computer Science student <a href="https://www.uni-saarland.de/en/home.html" target="_blank"><b>@Saarland University</b></a><br/>
-				I was a Computer Engineering student <a href="https://w3.bilkent.edu.tr/bilkent/" target="_blank"><b>@Bilkent University</b></a></h3>
+				I was a Computer Engineering student <a href="https://w3.bilkent.edu.tr/bilkent/" target="_blank"><b>@Bilkent University</b></a><br/>
+				I am currently a working student <a href="https://www.sap.com/germany/index.html" target="_blank"><b>@SAP</b></a>
+			</h3>
 		</div>
 	</div>
 
@@ -38,7 +40,10 @@
 				<h2>About Me</h2>
 				<h5 ><span2>Programming Enthusiast</span2></h5>
 				<p>A proactive BSc Computer
-					Science student at Saarland University. Was previously in BSc Computer Engineering at İhsan
+					Science student at Saarland University and is currently working at 
+					<a href="https://www.sap.com/germany/index.html" target="_blank" style="text-decoration:none;color:rgba(143, 214, 247, 0.8);">
+						<b>SAP</b>
+					</a> as a working student in Translation Project Coordination. Was previously in BSc Computer Engineering at İhsan
 					Doğramacı Bilkent University. Has
 					strong academic achievement, was in
 					the High Honour Roll and the Honour Roll back in İhsan
@@ -50,7 +55,8 @@
 					pursue a career in Computer Science
 					as an AI specialist, a Computational
 					Biologist or Machine Learning
-					specialist.</p>
+					specialist.
+				</p>
 			</div>
 		</div>
 	</section>
@@ -91,8 +97,8 @@
 					<span style="color:seashell;">BSc Computer Science</span><br/><span style="color:turquoise;">Oct 2022 - Present</span></h5>
 				<div class="pra">
 					<p>
-						Important Subjects: Programming I, Mathematics for Computer Scientists I, 
-						Perspectives in Computer Science, Programming II, System Architecture, Mathematics for Computer Scientists II
+						Important Subjects: Programming I, Mathematics for Computer Scientists I-II-III, 
+						Perspectives in Computer Science, Programming II, System Architecture, Introduction to Theoretical Computer Science, Fundamentals of Algorithms and Data Structures
 					</p>
 				</div>
 			</div>
@@ -152,7 +158,7 @@
 					<li data-aos="fade-up" data-aos-duration="700" data-aos-delay="200"><b style="color:rgb(183, 0, 255)">Turkish (Native)</b></li><br/>
 					<li data-aos="fade-up" data-aos-duration="700" data-aos-delay="200"><b style="color:rgb(183, 0, 255)">English:</b> Got 8 Overall Band Score (Reading: 9, Listening: 8, Writing: 6.5, Speaking: 7.5) 
 						in IELTS Academic Test June 2022, corresponding to C1 CEFR English level.</li><br/>
-					<li data-aos="fade-up" data-aos-duration="700" data-aos-delay="200"><b style="color:rgb(183, 0, 255)">German:</b> Has taken courses up to CEFR B2 level and still building up to C1 level.</li><br/>
+					<li data-aos="fade-up" data-aos-duration="700" data-aos-delay="200"><b style="color:rgb(183, 0, 255)">German:</b> ot 3,3,4,3 from TestDaf, corresponding to B2 CEFR German level.</li><br/>
 				</ul>
 			</div>
 		</div>
