--- a/index.html
+++ b/index.html
@@ -54,11 +54,10 @@
 				<p>
 					Has strong academic achievement, was in the High Honour Roll and the Honour Roll back in İhsan
 					Doğramacı Bilkent University, and programming experience with a strong algorithm-programming
-					background. Possesses strong leadership and communication skills with fluency in English and medial German.
+					background. Possesses strong leadership and communication skills with fluency in English and advanced German.
 				</p>
 				<p>
-					Keen to pursue a career in Computer Science as an AI specialist, a Computational
-					Biologist or Machine Learning specialist.
+					Keen to pursue a career in Computer Science as an AI specialist, a Data Scientist or Machine Learning specialist.
 				</p>
 			</div>
 		</div>
@@ -107,7 +106,10 @@
 				<div class="pra">
 					<p>Important Subjects: Programming I, Mathematics for Computer Scientists I-II-III, 
 					   Perspectives in Computer Science, Programming II, System Architecture, 
-					   Introduction to Theoretical Computer Science, Fundamentals of Algorithms and Data Structures</p>
+					   Introduction to Theoretical Computer Science, Fundamentals of Algorithms and Data Structures,
+					   Big Data Engineering, Database Systems, Elements of Machine Learning, Concurrent Programming,
+					   Data Networks, Cryptography, Machine Learning
+					</p>
 				</div>
 			</div>
 
@@ -123,6 +125,7 @@
 						<li>Was in Honour Roll for 2021-2022 Spring semester at İhsan Doğramacı Bilkent University.</li>
 						<li>Got an 8 overall band score in IELTS Academic Test, corresponding to C1 CEFR English level.</li>
 						<li>Got a 1440 SAT score within 98th percentile.</li>
+						<li>Got B2 in TestDaf German Language Proficiency Test.</li>
 					</ul>
 				</div>
 			</div>
@@ -138,22 +141,26 @@
 				<ul>
 					<li data-aos="fade-up" data-aos-duration="700">
 						<b>Project Management</b>
-						<p>Developed a Java project with two other Bilkent CS freshmen in less than two weeks and got A in project demo in Fall 2021-2022. 
+						<p>Developed a <span class="highlight-code">Java</span> project with two other Bilkent CS freshmen in less than two weeks and got <span class="highlight-concept">A</span> in project demo in Fall 2021-2022. 
 						   Demonstrated good knowledge of <span class="highlight-code">JavaFX</span> and used <span class="highlight-code">MySQL</span> for the database. 
-						   Developed Programming 2 projects using <span class="highlight-code">Arch-Linux</span></p>
+						   Developed Programming 2 projects using <span class="highlight-code">Arch-Linux</span>. Developed a <span class="highlight-concept">simulation for emergency services</span> in Saarland state using <span class="highlight-code">Kotlin</span> 
+						   as part of the Software-praktikum in 2023. Also developed a simulation for garbage collection in deep waters and shorelines using <span class="highlight-code">Kotlin</span> as part of the Software-praktikum in 2024
+						   with a team of four (other teams were 6-7 people) as the <span class="highlight-concept">earliest group ever to finish the project</span> and one of the <span class="highlight-concept">first programmer to finish the individual part</span>.</p>
 					</li>
 					<li data-aos="fade-up" data-aos-duration="700">
 						<b>Programming</b>
 						<p>Has good knowledge about algorithm designing and object-oriented programming. 
 						   Learned <span class="highlight-code">Java</span> and developed the CS 102 project using it. 
 						   Also completed the Programming II projects with <span class="highlight-code">Java</span>; 
-						   which included implementing a TicTacToe game, RayTracer and a C compiler for a small subset of C.
+						   which included implementing a <span class="highlight-concept">TicTacToe game</span>, <span class="highlight-concept">RayTracer</span> and a <span class="highlight-concept">C compiler</span> for a small subset of C.
 						   Made an intro to <span class="highlight-code">Python</span> and adjusted previous <span class="highlight-code">Java</span> learnings to it.
-						   Dived into <span class="highlight-code">C++</span> with CS 201 and implemented fundamental data structures with <span class="highlight-code">C++</span>. 
-						   Learned <span class="highlight-code">C</span> and implemented image processing and SAT Solver projects with it.
-						   Worked with <span class="highlight-code">SystemVerilog</span> and <span class="highlight-code">Verilog</span> to implement digital circuits and MIPS processor.
-						   Worked with <span class="highlight-code">MIPS Assembly</span> to implement a German IBAN verifier and instructions to handle syscall errors and timer interrupts.
-						   Also learned basics of <span class="highlight-code">HTML</span> and <span class="highlight-code">CSS</span>.</p>
+						   Dived into <span class="highlight-code">C++</span> with <span class="highlight-course">CS 201</span> and implemented <span class="highlight-concept">fundamental data structures</span> with <span class="highlight-code">C++</span>. 
+						   Learned <span class="highlight-code">C</span> and implemented <span class="highlight-concept">image processing</span> and <span class="highlight-concept">SAT Solver</span> projects with it.
+						   Worked with <span class="highlight-code">SystemVerilog</span> and <span class="highlight-code">Verilog</span> to implement <span class="highlight-concept">digital circuits</span> and <span class="highlight-concept">MIPS processor</span>.
+						   Worked with <span class="highlight-code">MIPS Assembly</span> to implement a <span class="highlight-concept">German IBAN verifier</span> and <span class="highlight-concept">instructions to handle syscall errors and timer interrupts</span>.
+						   Also learned basics of <span class="highlight-code">HTML</span> and <span class="highlight-code">CSS</span>.
+						   In the Software-praktikum, worked with <span class="highlight-code">Kotlin</span> to implement <span class="highlight-concept">Dijkstra's algorithm</span> and used software design patterns.
+						</p>
 					</li>
 				</ul>
 			</div>
