--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 					background. Possesses strong leadership and communication skills with fluency in English and advanced German.
 				</p>
 				<p>
-					Keen to pursue a career in Computer Science as an AI specialist, a Data Scientist or Machine Learning specialist.
+					Keen to pursue a career in Computer Science as an AI specialist, a Data Scientist or a Machine Learning specialist.
 				</p>
 			</div>
 		</div>
