--- a/index.html
+++ b/index.html
@@ -145,7 +145,8 @@
 						   Demonstrated good knowledge of <span class="highlight-code">JavaFX</span> and used <span class="highlight-code">MySQL</span> for the database. 
 						   Developed Programming 2 projects using <span class="highlight-code">Arch-Linux</span>. Developed a <span class="highlight-concept">simulation for emergency services</span> in Saarland state using <span class="highlight-code">Kotlin</span> 
 						   as part of the Software-praktikum in 2023. Also developed a simulation for garbage collection in deep waters and shorelines using <span class="highlight-code">Kotlin</span> as part of the Software-praktikum in 2024
-						   with a team of four (other teams were 6-7 people) as the <span class="highlight-concept">earliest group ever to finish the project</span> and one of the <span class="highlight-concept">first programmer to finish the individual part</span>.</p>
+						   with a team of four (other teams were 6-7 people) as the <span class="highlight-concept">earliest group ever to finish the project</span> and one of the <span class="highlight-concept">first programmer to finish the individual part</span>.
+						   Implemented a <span class="highlight-concept">concert ticket booking system</span> for concurrent use using <span class="highlight-code">Rust</span> as a collaborative project with another student.</p>
 					</li>
 					<li data-aos="fade-up" data-aos-duration="700">
 						<b>Programming</b>
