--- a/index.html
+++ b/index.html
@@ -88,7 +88,6 @@
 					<span>Sep 2020 - Sep 2022</span>
 				</h5>
 				<div class="pra">
-					<p>Predicted Grade: First Class Degree</p>
 					<p>Major GPA: 3.73</p>
 					<p>Important Subjects: Algorithms and Programming I (A), Algorithms and Programming II (A), 
 					   Fundamental Structures of Computer Science I (A), English and Composition II (A), 
@@ -195,16 +194,37 @@
 	</div>
 
 	<footer id="contact">
-		<p data-aos="fade-out" data-aos-duration="1000">Contact Me</p>
-		<p>I'm just an email away!</p>
-		<div class="social">
-			<a href="mailto:eoguzakin@hotmail.com"><i class="fa fa-envelope"></i></a>
-			<a href="https://www.linkedin.com/in/o%C4%9Fuz-ak%C4%B1n-18960722a/" target="_blank"><i class="fab fa-linkedin"></i></a>
-			<a href="https://github.com/eoguzakin" target="_blank"><i class="fab fa-github"></i></a>
-			<a href="https://www.researchgate.net/profile/Oguz-Akin-4" target="_blank"><i class="fab fa-researchgate"></i></a>
+		<div class="footer-content" data-aos="fade-up" data-aos-duration="1000">
+			<p>Contact Me</p>
+			<p>I'm just an email away!</p>
+			<div class="social">
+				<a href="mailto:eoguzakin@hotmail.com"><i class="fa fa-envelope"></i></a>
+				<a href="https://www.linkedin.com/in/o%C4%9Fuz-ak%C4%B1n-18960722a/" target="_blank"><i class="fab fa-linkedin"></i></a>
+				<a href="https://github.com/eoguzakin" target="_blank"><i class="fab fa-github"></i></a>
+				<a href="https://www.researchgate.net/profile/Oguz-Akin-4" target="_blank"><i class="fab fa-researchgate"></i></a>
+			</div>
+			<p style="margin-top: 20px;">
+				<i class="fas fa-eye"></i> Visitors: <span id="visitor-count">0</span>
+			</p>
 		</div>
 	</footer>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js" integrity="sha512-A7AYk1fGKX6S2SsHywmPkrnzTZHrgiVT7GcQkLGDe2ev0aWb8zejytzS8wjo7PGEXKqJOrjQ4oORtnimIRZBtw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-	<script>AOS.init();</script>
+	<script>
+		// Initialize AOS with proper settings
+		AOS.init({
+			once: true,
+			duration: 1000,
+			offset: 100,
+			delay: 0
+		});
+
+		// Visitor Counter
+		document.addEventListener('DOMContentLoaded', function() {
+			let count = localStorage.getItem('visitorCount') || 0;
+			count = parseInt(count) + 1;
+			localStorage.setItem('visitorCount', count);
+			document.getElementById('visitor-count').textContent = count;
+		});
+	</script>
 </body>
 </html>
